# py-algochat

./: .gitignore  .trust.toml  AGENTS.md  README.md  fledge.toml  pyproject.toml
.claude/commands/specsync/: create-change.md  create-spec.md
.claude/skills/spec-sync/: SKILL.md
.cursor/commands/: specsync-create-change.md  specsync-create-spec.md
.gemini/commands/specsync/: create-change.toml  create-spec.toml
.github/workflows/: ci.yml  publish.yml  trust.yml
.specsync/: adoption-report.json  config.toml  registry.toml  sdd.json
.specsync/changes/CHG-0001-adopt-specsync-5-0-1-and-trust-1-0-0-governance-for-the-python-algochat-implemen/: approvals.json  change.md  context.md  design.md  docs.md  plan.md  research.md  state.json  tasks.md  testing.md  verification-attempts.json  verification.json
.specsync/changes/CHG-0002-add-complete-active-python-algochat-contract-and-enforce-100-percent-lifecycle-c/: approvals.json  change.md  context.md  design.md  (+8 more)
specs/algochat/: algochat.spec.md  context.md  requirements.md  tasks.md  testing.md
src/algochat/: __init__.py  account.py  blockchain.py  client.py  crypto.py  envelope.py  keys.py  models.py  psk_channel.py  psk_crypto.py  psk_envelope.py  psk_exchange.py  psk_ratchet.py  psk_state.py  psk_types.py  queue.py  signature.py  storage.py  types.py
tests/: __init__.py  export_envelopes.py  test_blockchain.py  test_client.py  test_client_psk.py  test_cross_impl.py  test_crypto.py  test_keys.py  test_models.py  test_psk.py  test_psk_channel.py  test_queue.py  test_signature.py  test_storage.py  test_vectors.py
(+51 files in other folders)
