[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-algochat"
version = "0.1.0"
description = "Python implementation of the AlgoChat protocol for encrypted messaging on Algorand"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "CorvidLabs", email = "hello@corvidlabs.com" }
]
keywords = ["algorand", "encryption", "messaging", "blockchain", "chacha20", "x25519"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/CorvidLabs/py-algochat"
Repository = "https://github.com/CorvidLabs/py-algochat"
Issues = "https://github.com/CorvidLabs/py-algochat/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/algochat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
